--- a/app/src/main/res/layout/activity_pic.xml
+++ b/app/src/main/res/layout/activity_pic.xml
@@ -3,6 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.chensen.gank.theme.ColorView
+        android:id="@+id/status_bar"
+        android:layout_width="match_parent"
+        android:background="?attr/colorPrimary"
+        android:layout_height="20dp" />
     <include layout="@layout/toolbar_layout"/>
 
     <uk.co.senab.photoview.PhotoView
