--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.chensen.gank.theme.ColorRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_title"
     android:layout_width="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="?attr/colorPrimary"
     android:layout_height="48dp">
 
     <ImageView
@@ -21,4 +22,4 @@
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
-</RelativeLayout>
+</com.chensen.gank.theme.ColorRelativeLayout>
