--- a/app/src/main/res/layout/load_view.xml
+++ b/app/src/main/res/layout/load_view.xml
@@ -15,6 +15,7 @@
 
     <TextView
         android:layout_marginLeft="20dp"
+        android:textColor="#444444"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="加载中···" />
